--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 <body>
 
-Website MrMatthewE HI
+Website MrMatthewE
 <br/>
-New Line
+This is a website hosted on Github.
+
+<script>
+var name = prompt('What is your name?');
+alert('Hello' + name);
+</script>
 
 </body>
 </html>
