--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<font face="Calibri" color="Green">
 Website MrMatthewE
 <br/>
 This is a website hosted on Github.
-
+</font>
 <script>
 var name = prompt('What is your name?');
 alert('Hello ' + name);
