--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <font face="Calibri" color="Green">
-Website MrMatthewE
+Website by MrMatthewE
 <br/>
 This is a website hosted on Github.
 </font>
