--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ This is a website hosted on Github.
 </font>
 <script>
 var name = prompt('What is your name?');
+if (name == 'Matthew'){
+  alert('Why are you entering your own website?');
+}
 alert('Hello ' + name);
 </script>
 
