--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ if (name == 'Matthew'){
 }
 alert('Hello ' + name);
 </script>
-<ing src="https://www.google.co.nz/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" />
+<ing src="http://www.trademe.co.nz/images/3/common/tm_logo_2015_600_v2.png" />
 </body>
 </html>
