--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ if (name == 'Matthew'){
 }
 alert('Hello ' + name);
 </script>
-<ing src="http://www.trademe.co.nz/images/3/common/tm_logo_2015_600_v2.png" />
+//<ing src="http://www.trademe.co.nz/images/3/common/tm_logo_2015_600_v2.png" />
+<img src="http://www.trademe.co.nz/images/3/common/tm_logo_2015_600_v2.png" alt="TradeMe"><br> 
+
 </body>
 </html>
