--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <font face="Calibri" color="Green">
 Website by MrMatthewE
 <br/>
-This is a website hosted on Github.
+This is a website hosted on Github.<br/>
 </font>
+<img src="http://www.trademe.co.nz/images/3/common/tm_logo_2015_600_v2.png" alt="TradeMe"><br/> 
 <script>
 var name = prompt('What is your name?');
 if (name == 'Matthew'){
@@ -13,7 +14,7 @@ if (name == 'Matthew'){
 }
 alert('Hello ' + name);
 </script>
-<img src="http://www.trademe.co.nz/images/3/common/tm_logo_2015_600_v2.png" alt="TradeMe"><br> 
+
 
 </body>
 </html>
