Update With Trade Me Logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Website by MrMatthewE
 This is a website hosted on Github.<br/>
 </font>
 <img src="http://www.trademe.co.nz/images/3/common/tm_logo_2015_600_v2.png" alt="TradeMe"><br/> 
+Image from http://www.trademe.co.nz <br/>
 <script>
 var name = prompt('What is your name?');
 if (name == 'Matthew'){
