--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ if (name == 'Matthew'){
   alert('Why are you entering your own website?');
 }
 alert('Hello ' + name);
+document.write('Welcome to this website ' + name);
 </script>
 
 
