--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@ if (name == 'Matthew'){
   alert('Why are you entering your own website?');
 }
 alert('Hello ' + name);
+<font face="Calibri" colour="2D81FF">
 document.write('Welcome to this website ' + name);
+</font>
+
 </script>
 
 
