--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 Website by MrMatthewE
 <br/>
 This is a website hosted on Github.<br/>
+</font>
 
+<font face="Calibri" color="2D81FF">
 <img src="http://www.trademe.co.nz/images/3/common/tm_logo_2015_600_v2.png" alt="TradeMe"><br/> 
 Image from http://www.trademe.co.nz <br/>
+</font>
+
+<font face="Calibri" color="Orange">
 <script>
 var name = prompt('What is your name?');
 if (name == 'Matthew'){
@@ -19,6 +24,7 @@ document.write('Welcome to this website ' + name);
 
 
 </script>
+
 </font>
 
 </body>
