--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@ This is a website hosted on Github.<br/>
 
 <font face="Calibri" color="Orange">
 <script>
+
+
+var isMobile = {
+    Android: function() {
+        return navigator.userAgent.match(/Android/i);
+    },
+    BlackBerry: function() {
+        return navigator.userAgent.match(/BlackBerry/i);
+    },
+    iOS: function() {
+        return navigator.userAgent.match(/iPhone|iPad|iPod/i);
+    },
+    Opera: function() {
+        return navigator.userAgent.match(/Opera Mini/i);
+    },
+    Windows: function() {
+        return navigator.userAgent.match(/IEMobile/i) || navigator.userAgent.match(/WPDesktop/i);
+    },
+    any: function() {
+        return (isMobile.Android() || isMobile.BlackBerry() || isMobile.iOS() || isMobile.Opera() || isMobile.Windows());
+    }
+}
+if( isMobile.any() ){
+  alert('Mobile Device');
+}
+
+
 var name = prompt('What is your name?');
 if (name == 'Matthew'){
   alert('Why are you entering your own website?');
