updated Index.html to include colour picker

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@ document.write('Welcome to this website ' + name);
 </script>
 
 </font>
-
+<br/>
+    <font face="Calibri" color="26B7FF">
+    JS-Colour Demo
+    <br/>
+    <script type="text/javascript" src="JS-Colour/jscolor.js"></script>
+    Choose Colour: <input class="color" value="66ff00"
+                          </font>
+        <br/>
+        
+        <font face="Calibri" color=this.color>
+            Hello
+        </font>
 </body>
 </html>
