--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@ document.write('Welcome to this website ' + name);
         <font face="Calibri" color=this.color>
             Hello
         </font>
+        <br/>
+        The above colour picker is called JS-Color.
 </body>
 </html>
