--- a/index.html
+++ b/index.html
@@ -68,5 +68,7 @@ document.write('Welcome to this website ' + name);
         </font>
         <br/>
         The above colour picker is called JS-Color.
+        <br/>
+        <img src="Images/Telescope.png" alt="Telescope">
 </body>
 </html>
