--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <font face="Calibri" color="Green">
 Website by MrMatthewE
 <br/>
-    Test<br/>
+    <a href="404.html">Check Out a 404 error!</a>
+    <br/>
 This is a website hosted on Github.<br/>
+    
 </font>
 
 <font face="Calibri" color="2D81FF">
