--- a/404.html
+++ b/404.html
@@ -1,8 +1,10 @@
 <!DOCTYPE>
 <html>
     <body>
+        <style>
     h1 {color:33ADFF;
         font-family:Calibri}
+            </style>
     <h1>
         Aw snap, Thats an error.
         </h1>
