Fixed Name Variable

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ else{
   alert('Hello ' + userName);
 }
 
-document.write('Welcome to this website ' + name);
+document.write('Welcome to this website ' + userName);
 
 
 </script>
