--- a/Bootstrap Test/Bootstrap Test.html
+++ b/Bootstrap Test/Bootstrap Test.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="../index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="About/About.html">About</a></li>
                     <li><a href="#">Contact</a></li>
                         
                     
