--- a/Bootstrap Test/About/About.html
+++ b/Bootstrap Test/About/About.html
@@ -32,7 +32,7 @@
             <!-- Menu Items-->
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li class="active"><a href="About.html">About</a></li>
                     <li><a href="#">Contact</a></li>
                         
