--- a/Bootstrap Test/Bootstrap Test.html
+++ b/Bootstrap Test/Bootstrap Test.html
@@ -35,6 +35,7 @@
                     <li class="active"><a href="../index.html">Home</a></li>
                     <li><a href="About/About.html">About</a></li>
                     <li><a href="#">Contact</a></li>
+                    <li><a href="Feeds/Feeds.html">Feeds</a></li>
                         
                     
                     <!-- Drop Down menu-->
