--- a/Bootstrap Test/Feeds/Feeds.html
+++ b/Bootstrap Test/Feeds/Feeds.html
@@ -32,10 +32,10 @@
             <!-- Menu Items-->
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="About/About.html">About</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="../About/About.html">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li class="active"><a href="Feeds/Feeds.html">Feeds</a></li>                        
+                    <li class="active"><a href="Feeds.html">Feeds</a></li>                        
                     
                     <!-- Drop Down menu-->
                     <li class="dropdown">
