--- a/Bootstrap Test/About/About.html
+++ b/Bootstrap Test/About/About.html
@@ -35,7 +35,7 @@
                     <li><a href="/index.html">Home</a></li>
                     <li class="active"><a href="About.html">About</a></li>
                     <li><a href="#">Contact</a></li>
-                     <li><a href="Feeds/Feeds.html">Feeds</a></li>   
+                     <li><a href="../Feeds/Feeds.html">Feeds</a></li>   
                     
                     <!-- Drop Down menu-->
                     <li class="dropdown">
