--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+    
+    </head>
 <title>
     Github Webpage Title
     </title>
