--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@ This is a website hosted on Github.<br/>
     
     
 <font face="Calibri" color="2D81FF">
-<img src="http://www.trademe.co.nz/images/3/common/tm_logo_2015_600_v2.png" alt="TradeMe"><br/> 
-<a href="http://www.trademe.co.nz">Image from http://www.trademe.co.nz </a> <br/>
+Calibri
 </font>
 
 <font face="Calibri" color="Orange">
