--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ This is a website hosted on Github.<br/>
     
     <p>
     <a href="Bootstrap%20Test/Bootstrap%20Test.html" style="color: #25AFF5">Click here to go to Bootstrap Test!</a>
+        </br>
+        <a href="PageTest.html" style="color: #25AFF5">Click here to go to the test page</a>
     
     </p>
     </font>
