--- a/PageTest.html
+++ b/PageTest.html
@@ -7,6 +7,7 @@
             <link rel="stylesheet" href="css/animate.css">
                     <link rel="stylesheet" href="css/Positioning.css">
                             <link rel="stylesheet" href="css/colourAnimation.css">
+                            <link rel="stylesheet" href="css/styles.css">
 
 
         <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
