--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
         font-family:Calibri}
             </style>
     <h1>
-        Aw snap, Thats an error.
+        Aw snap, Thats an error. Edit RaspPI
         </h1>
         
         <font face="Calibri" Color="FF562B" size="72">
