--- a/hauturu100/index.html
+++ b/hauturu100/index.html
@@ -40,7 +40,7 @@
                   <div class="col">Col 1</div>
                   <div class="col-10">
             <div class="contatiner-fluid cInfo">
-                <p>Hauturu School is celebrating 100 years! The school was officialy opened in 1918 making 2018 and exciting milestone where we will be celebrating 100 years of the school. Planning is underway for a centenary to be held at the school on Labour weekend, 20/21 October 2018</p>
+                <p>Hauturu School is celebrating 100 years! The school was officialy opened in 1918 making 2018 an exciting milestone where we will be celebrating 100 years of the school. Planning is underway for a centenary to be held at the school on Labour weekend, 20/21 October 2018</p>
             </div>
             
             <br>
