--- a/hauturu100/index.html
+++ b/hauturu100/index.html
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Who is going?</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Gallery</a></li>
                 </div>      
         </nav>
             <br>
