--- a/hauturu100/index.html
+++ b/hauturu100/index.html
@@ -46,6 +46,19 @@
             <br>
             
             <button type="button" class = "btn btn-outline-success btn-block animated bounce" data-toggle="modal" data-target="#signUpModal"> Sign me up!</button>
+                      <br>
+                      <form>
+                          <blockquote class="blockquote">
+                              <p class="mb-0">Unsure of the details you provided?</p>
+                              <footer class="blockquote-footer">Enter your email in the box, and we'll check it out and send them to the email provided!</footer>
+                          </blockquote>
+                      <div class="input-group">          
+                                    <input type="email" class="form-control" id="checkEmail" aria-describedby="emailNameHelp" placeholder="Enter your email">
+                                    <span class="input-group-button">
+                                        <button type="button" class="btn btn-primary">Check for me!</button>
+                                    </span>
+                                </div>
+                      </form>
               </div>
                   <div class="col">Col 3</div>
               </div>
