--- a/hauturu100/index.html
+++ b/hauturu100/index.html
@@ -105,7 +105,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="phNum">Phone Number</label>
-                                    <input type="text" class="form-control" id="email" aria-describedby="phNumberHelp" placeholder="Contact phone Number">
+                                    <input type="text" class="form-control" id="phone" aria-describedby="phNumberHelp" placeholder="Contact phone Number">
                                     
                                 </div>
                                 <div class="form-check">
