--- a/hauturu100/index.html
+++ b/hauturu100/index.html
@@ -63,7 +63,7 @@
                               <footer class="blockquote-footer">Enter your email in the box below, and we'll check it out and send them to the email provided!</footer>
                           </blockquote>
                       <div class="input-group">          
-                                    <input type="email" class="form-control" id="checkEmail" aria-describedby="emailNameHelp" placeholder="Enter your email">
+                                    <input type="email" class="form-control" id="email" aria-describedby="emailNameHelp" placeholder="Enter your email">
                                     <span class="input-group-button">
                                         <button type="button" class="btn btn-primary">Check for me!</button>
                                     </span>
