--- a/hauturu100/index.html
+++ b/hauturu100/index.html
@@ -26,8 +26,8 @@
                 <!--Menu Items-->
                 
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active"><a href="#" class="nav-link ">Home <span class="sr-only">(current)</span></a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                        <li class="nav-item active"><a href="index.html" class="nav-link ">Home <span class="sr-only">(current)</span></a></li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Who is going?</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Gallery</a></li>
@@ -40,7 +40,7 @@
               <div class="row">
                   <div class="col">Col 1</div>
                   <div class="col-10">
-            <div class="contatiner-fluid cInfo">
+            <div class="container-fluid cInfo">
                 
                 <div class="jumbotron">
                     <h1 class="display-3">Hauturu School Centenary</h1>
