--- a/hauturu100/faq.html
+++ b/hauturu100/faq.html
@@ -41,23 +41,16 @@
                   <div class="col">Col 1</div>
                   <div class="col-10">
                       <div class="jumbotron animated bounce">
-                          <!--https://linearicons.com/free-->
-                          <h1 class="display-4">Contact Us</h1>
-                            <div class="media">
-                                <svg class="lnr lnr-phone-handset align-self-center mr-3" width="5mm" height="5mm"><use xlink:href="#lnr-phone-handset"></use></svg>
-                                <p class="mb-0">&nbsp;078700000</p>
-                          </div>
-                          <br>
-                          <div class="media">
-                                <svg class="lnr lnr-envelope" width="5mm" height="5mm"><use xlink:href="#lnr-envelope"></use></svg>
-                                <p class="mb-0">&nbsp;john@smith.com</p>
-                          </div>
-                          <br>
-                          <div class="media">
-                                <svg class="lnr lnr-map-marker" width="5mm" height="5mm"><use xlink:href="#lnr-map-marker"></use></svg>
-                                <p class="mb-0">&nbsp;Hauturu School</p>
-                          </div>
-                            
+                      <h1 class="display-3">FAQ</h1>
+                      <blockquote class="blockquote">
+                              <p class="mb-0">Question 1</p>
+                              <footer class="blockquote-footer">Answer 1</footer>
+                          </blockquote>
+                      <br>
+                         <blockquote class="blockquote">
+                              <p class="mb-0">Question 2</p>
+                              <footer class="blockquote-footer">Answer 2</footer>
+                          </blockquote>
                       </div>
                   </div>
                   <div class="col">col3</div>
