--- a/hauturu100/index.html
+++ b/hauturu100/index.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active"><a href="index.html" class="nav-link ">Home <span class="sr-only">(current)</span></a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
+                        <li class="nav-item"><a href="faq.html" class="nav-link">FAQ</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Who is going?</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Gallery</a></li>
                         <li class="nav-item"><a href="https://www.facebook.com/groups/1438710979556970/" class="nav-link">Facebook Page</a></li>
