--- a/hauturu100/faq.html
+++ b/hauturu100/faq.html
@@ -56,6 +56,8 @@
                   <div class="col">col3</div>
                  </div>
             </div>
-        
+        <nav class="navbar fixed-bottom navbar-light bg-light">
+                Hauturu Centenary 2018
+            </nav>
     </body>
 </html>
