--- a/hauturu100/contact.html
+++ b/hauturu100/contact.html
@@ -57,6 +57,7 @@
                                 <svg class="lnr lnr-map-marker" width="5mm" height="5mm"><use xlink:href="#lnr-map-marker"></use></svg>
                                 <p class="mb-0">&nbsp;Hauturu School</p>
                           </div>
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1921.4922595474213!2d174.92820136446434!3d-38.10399934352464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snz!4v1509760675769" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                             
                       </div>
                   </div>
