--- a/hauturu100/contact.html
+++ b/hauturu100/contact.html
@@ -50,7 +50,7 @@
                           <br>
                           <div class="media">
                                 <svg class="lnr lnr-envelope" width="5mm" height="5mm"><use xlink:href="#lnr-envelope"></use></svg>
-                                <p class="mb-0">&nbsp;john@smith.com</p>
+                              <p class="mb-0">&nbsp;<a href="mailto:john@smith.com">john@smith.com</a></p>
                           </div>
                           <br>
                           <div class="media">
