--- a/hauturu100/contact.html
+++ b/hauturu100/contact.html
@@ -45,12 +45,12 @@
                           <h1 class="display-4">Contact Us</h1>
                             <div class="media">
                                 <svg class="lnr lnr-phone-handset align-self-center mr-3" width="5mm" height="5mm"><use xlink:href="#lnr-phone-handset"></use></svg>
-                                <p class="mb-0">&nbsp;078700000</p>
+                                <p class="mb-0">&nbsp;07 871 0xxx</p>
                           </div>
                           <br>
                           <div class="media">
                                 <svg class="lnr lnr-envelope" width="5mm" height="5mm"><use xlink:href="#lnr-envelope"></use></svg>
-                              <p class="mb-0">&nbsp;<a href="mailto:john@smith.com">john@smith.com</a></p>
+                              <p class="mb-0">&nbsp;<a href="mailto:john@smith.com?subject=Hauturu School Centenary">john@smith.com</a></p>
                           </div>
                           <br>
                           <div class="media">
