--- a/hauturu100/contact.html
+++ b/hauturu100/contact.html
@@ -49,8 +49,9 @@
                           </div>
                           <br>
                           <div class="media">
-                                <svg class="lnr lnr-envelope" width="5mm" height="5mm"><use xlink:href="#lnr-envelope"></use></svg>
-                              <p class="mb-0">&nbsp;<a href="mailto:john@smith.com?subject=Hauturu School Centenary">john@smith.com</a></p>
+                                <a href="mailto:john@smith.com?subject=Hauturu School Centenary">
+                                    <svg class="lnr lnr-envelope" width="5mm" height="5mm"><use xlink:href="#lnr-envelope"></use></svg>
+                              <p class="mb-0">&nbsp;john@smith.com</a></p>
                           </div>
                           <br>
                           <div class="media">
