--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 
 
 
-
-
-  <h1 class="animate__animated animate__backInDown" style="text-align: center">An animated element</h1>
-
-
-
+<div class="titlea">
+  <h1 class="animate__animated animate__backInDown" style="">Matt Burger Co</h1>
+<h2 class="animate__animated animate__fadeIn animate__delay-1s" style="">Our slogan: Meat And The Rest</h2>
+<img src="images/Logo.jpg" class="animate__animated animate__fadeIn animate__delay-1s" alt="logo">
+<br>
+Site under construction
+</div>
 </body>
 </html>
