--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-
+  <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -22,10 +24,12 @@
 
 <div class="titlea">
   <h1 class="animate__animated animate__backInDown" style="">Matt Burger Co</h1>
-<h2 class="animate__animated animate__fadeIn animate__delay-1s" style="">Our slogan: Meat And The Rest</h2>
+<h2 class="animate__animated animate__fadeIn animate__delay-1s" style="">Our slogan: Meat And The Toppings</h2>
 <img src="Images/Logo.jpg" class="animate__animated animate__fadeIn animate__delay-1s" alt="logo">
 <br>
+<div class="animate__animated animate__fadeIn animate__delay-1s">
 Site under construction
+</div>
 </div>
 </body>
 </html>
