--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="titlea">
   <h1 class="animate__animated animate__backInDown" style="">Matt Burger Co</h1>
 <h2 class="animate__animated animate__fadeIn animate__delay-1s" style="">Our slogan: Meat And The Toppings</h2>
-<img src="Images/Logo.jpg" class="animate__animated animate__fadeIn animate__delay-1s" alt="logo">
+<img src="Images/Logo.jpg" class="animate__animated animate__fadeIn animate__delay-1s" style="max-width:100%;height:auto;"alt="logo">
 <br>
 <div class="animate__animated animate__fadeIn animate__delay-1s">
 Site under construction
