--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 <h2 class="animate__animated animate__fadeIn animate__delay-1s" style="">Meat And The Toppings</h2>
 <img src="Images/Logo.jpg" class="animate__animated animate__fadeIn animate__delay-1s" style="max-width:100%;height:auto;"alt="logo">
 <br>
+<img src="Images/burger.jpg" class="animate__animated animate__fadeIn animate__delay-1s" style="max-width:100%;height:auto;"alt="logo">
+
+<br>
+
 <div class="animate__animated animate__fadeIn animate__delay-1s">
 Site under construction
 </div>
